# YEssential-For-Endstone

./: .gitignore  CHANGELOG.md  README.md  api.txt  build-dev.bat  build-dev.ps1  build-whl.bat  build-whl.ps1  cliff.toml  pyproject.toml  setup.py  umoney.py  update_versions.json
.github/workflows/: auto-tag.yml  changelog.yml  dev-pr.yml  release.yml
YEssential-main/: README.md
YEssential-main/.github/ISSUE_TEMPLATE/: requestbugcn.yml  requestbugen.yml  requestfeaturecn.yml  requestfeatureen.yml
src/endstone_example/: __init__.py  back.py  clean.py  config.py  economy.py  home.py  hub.py  language.py  mian.py  notice.py  plugin.yml  pvp.py  redpacket.py  rtp.py  suicide.py  tpa.py  warp.py
src/endstone_yessential/: __init__.py  back.py  cd.py  cleanmgr.py  config.py  constant.py  crash.py  economy.py  fcam.py  home.py  hub.py  i18n.py  log.py  main.py  maintenance.py  motd.py  notice.py  pvp.py  randomcolor.py  redpacket.py  rtp.py  servers.py  sign.py  suicide.py  tpa.py  update_checker.py  warp.py
