[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-yessential"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Nico6719", email = "hello@endstone.dev" },
]
description = "Python example plugin for Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/EndstoneMC/python-example-plugin"

[project.entry-points."endstone"]
example = "endstone_example:ExamplePlugin"