[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-yessential"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Nico6719", email = "nico6719@qq.com" },
    { name = "MengHanLOVE", email = "2193438288@qq.com" }
]
description = "基于 Endstone 的 YEssential"
readme = "README.md"
license-files = ["LICEN[CS]E*"]
keywords = ["endstone", "plugin", "essential", "yessential", "tpa", "money", "shop"]

[project.urls]
Homepage = "https://github.com/Nico6719/YEssential-For-Endstone"

[project.entry-points."endstone"]
yessential = "endstone_yessential:YEssentialPlugin"